[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/guysprite2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/far_1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/close_2.png" type="Texture" id=3]
[ext_resource path="res://Battery.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 400, 200, 200 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 200, 400, 200, 200 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 400, 400, 200, 200 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 600, 400, 200, 200 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [  ],
"loop": true,
"name": "Invisible",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "Spawn",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 1.0
} ]

[node name="Battery" type="Area2D"]
collision_layer = 1024
collision_mask = 4
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.875, -0.374998 )
scale = Vector2( 0.16125, 0.15375 )
frames = SubResource( 6 )
animation = "Invisible"

[node name="TimeToLive" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Battery_body_entered"]
[connection signal="timeout" from="TimeToLive" to="." method="_on_TimeToLive_timeout"]
